@@ -35,7 +35,7 @@ jobs:
 
   build-linux:
     name: build-linux
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       TRAVIS_OS_NAME: linux
       BUILD_TARGET: linux
